--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -140,55 +140,55 @@
       <% if @presenter.toc? %>
         <li role="presentation">
           <h2>
-            <a id="tab-toc" href="#toc" aria-controls="toc" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Table of Contents</a>
+            <a id="tab-toc" href="#toc" aria-controls="toc" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Table of Contents</a>
           </h2>
         </li>
       <% end %>
       <% if @presenter.assets? %>
         <li role="presentation">
           <h2>
-            <a id="tab-resources" href="#resources" aria-controls="resources" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Resources</a>
+            <a id="tab-resources" href="#resources" aria-controls="resources" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Resources</a>
           </h2>
         </li>
       <% end %>
       <% if @presenter.reviews? %>
         <li role="presentation">
           <h2>
-            <a id="tab-reviews" href="#reviews" aria-controls="reviews" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Reviews</a>
+            <a id="tab-reviews" href="#reviews" aria-controls="reviews" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Reviews</a>
           </h2>
         </li>
       <% end %>
       <% if @presenter.related? %>
         <li role="presentation">
           <h2>
-            <a id="tab-related" href="#related" aria-controls="related" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Related Titles</a>
+            <a id="tab-related" href="#related" aria-controls="related" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Related Titles</a>
           </h2>
         </li>
       <% end %>
       <% if @presenter.webgl? %>
         <li role="presentation">
           <h2>
-            <a id="tab-webgl" href="#webgl" aria-controls="webgl" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">3-D Model</a>
+            <a id="tab-webgl" href="#webgl" aria-controls="webgl" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">3-D Model</a>
           </h2>
         </li>
       <% end %>
       <% if @presenter.database? %>
         <li role="presentation">
           <h2>
-            <a id="tab-database" href="#database" aria-controls="database" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Database</a>
+            <a id="tab-database" href="#database" aria-controls="database" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Database</a>
           </h2>
         </li>
       <% end %>
       <% if @presenter.aboutware? %>
         <li role="presentation">
           <h2>
-            <a id="tab-aboutware" href="#aboutware" aria-controls="aboutware" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">About</a>
+            <a id="tab-aboutware" href="#aboutware" aria-controls="aboutware" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">About</a>
           </h2>
         </li>
       <% end %>
         <li role="presentation">
           <h2>
-            <a id="tab-stats" href="#stats" aria-controls="stats" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Stats</a>
+            <a id="tab-stats" href="#stats" aria-controls="stats" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Stats</a>
           </h2>
         </li>
     </ul>
