--- a/app/views/press_statistics/index.html.erb
+++ b/app/views/press_statistics/index.html.erb
@@ -3,37 +3,40 @@
 <% ga_url = @press.google_analytics_url %>
 <% map_url = @press.readership_map_url %>
 
-<% if map_url.present? %>
-  <script type="text/javascript">
-    // Evil hack for Chrome browsers dropping pins but not loading map background.
-    // Appends a cache busting parameter to the URL to force a reload.
-    window.addEventListener('load', function() {
-      var iframe = document.getElementById('map_iframe');
-      var suffix = Math.floor((Math.random()*1000000)+1);
-      iframe.src = "<%= map_url %>&uid=" + suffix;
-    });
-  </script>
-<% end %>
-
 <%= render 'shared/breadcrumbs' %>
 
-  <div class="row monograph-assets-toc-epub">
     <div class="col-sm-12" id="tabs">
       <ul class="nav nav-tabs" role="tablist">
-        <% if ga_url.present? %>
-          <li role="presentation">
-            <h2><a id="tab-analytics" href="#analytics" aria-controls="analytics" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Google Analytics</a></h2>
-          </li>
-        <% end %>
         <% if map_url.present? %>
           <li role="presentation">
-            <h2><a id="tab-map" href="#map" aria-controls="map" role="tab" data-toggle="tab" aria-selected="false" tabindex="-1">Readership Map</a></h2>
+            <h2><a id="tab-map-press-stats" href="#map" aria-controls="map-press-stats" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Readership Map</a></h2>
+          </li>
+        <% end %>
+        <% if ga_url.present? %>
+          <li role="presentation">
+            <h2><a id="tab-analytics-press-stats" href="#analytics" aria-controls="analytics-press-stats" role="tab" data-toggle="tab" aria-selected="false" aria-expanded="false" tabindex="-1">Google Analytics</a></h2>
           </li>
         <% end %>
       </ul>
-      <div id="tabs-content" class="tab-content monograph-assets-toc-epub-content" aria-live="polite">
+      <div id="tabs-content" class="tab-content" aria-live="polite">
+        <% if map_url.present? %>
+          <section id="map" class="tab-pane fade row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-map-press-stats" tabindex="0">
+            <% if @press.subdomain == 'michigan' %>
+              <p class="press-stats-text">
+                The Readership Map replays every view or download of books or media components that occurred the previous day.
+              </p>
+            <% end %>
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div id="map-wrapper" class="iframe-container">
+                  <iframe src="<%= map_url %>" id="map_iframe" class=".embed-responsive-item"></iframe>
+                </div>
+              </div>
+            </div>
+          </section>
+        <% end %>
         <% if ga_url.present? %>
-          <section id="analytics" class="tab-pane fade toc row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-analytics" tabindex="0">
+          <section id="analytics" class="tab-pane fade row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-analytics-press-stats" tabindex="0">
             <div class="col-sm-12">
               <% if @press.subdomain == 'michigan' %>
                 <p class="press-stats-text">
@@ -50,23 +53,5 @@
             </div>
           </section>
         <% end %>
-        <% if map_url.present? %>
-          <section id="map" class="tab-pane fade resources row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-map" tabindex="0">
-            <% if @press.subdomain == 'michigan' %>
-              <p class="press-stats-text">
-                The Readership Map replays every view or download of books or media components that occurred the previous day.
-              </p>
-            <% end %>
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="iframe-container">
-                  <iframe src="<%= map_url %>" id="map_iframe" class=".embed-responsive-item"></iframe>
-                </div>
-              </div>
-            </div>
-          </section>
-        <% end %>
       </div>
     </div>
-  </div>
-
