adjust logo size for UMMAA

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -3819,6 +3819,25 @@ $gabii-link-hover:    #1e5667;
 }
 ///////////////////////////////////////////////
 //
+// University of Michigan - UMMAA
+//
+//////////////////////////////////////////////
+
+.ummaa {
+
+// jumbotron
+
+  .jumbotron {
+    .logo {
+
+	img {
+     	  width: 180px;
+   	}
+     } 	
+   }
+}
+///////////////////////////////////////////////
+//
 // University of Minnesota Press
 //
 ///////////////////////////////////////////////
