--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,9 @@
     <% end %>
   </hgroup>
 </header>
-<% if defined?(@press.subdomain) %>
-  <%= render 'shared/brand_press_jumbotron' %>
+<% if defined?(@press.subdomain) && controller_name == "press_catalog" %>
+  <% unless @press.navigation_block.present? %>
+    <%= render 'shared/brand_press_jumbotron' %>
+  <% end %>
 <% end %>
 <%= render 'shared/brand_press_banner' if show_banner?(current_actor, press_subdomain) %>
