--- a/app/views/layouts/hyrax.html.erb
+++ b/app/views/layouts/hyrax.html.erb
@@ -15,12 +15,24 @@
     <%= content_for?(:main) ? yield(:main) : yield %>
   </div>
 
-  <% if defined?(@press.subdomain) %>
-    <%= render 'shared/brand_press_footer' %>
+  <% if defined?(@press.subdomain) && !@press.new_record? %>
+    <% if @press.subdomain == 'leverpress' %>
+      <%= render 'shared/brand_press_footer_lever' %>
+    <% else %>
+      <%= render 'shared/brand_press_footer' %>
+    <% end %>
   <% elsif defined?(@presenter.subdomain) %>
-    <%= render 'shared/brand_press_footer' %>
+    <% if @presenter.subdomain == 'leverpress' %>
+      <%= render 'shared/brand_press_footer_lever' %>
+    <% else %>
+      <%= render 'shared/brand_press_footer' %>
+    <% end %>
   <% elsif defined?(@presenter.parent.subdomain) %>
-    <%= render 'shared/brand_press_footer' %>
+    <% if @presenter.parent.subdomain == 'leverpress' %>
+      <%= render 'shared/brand_press_footer_lever' %>
+    <% else %>
+      <%= render 'shared/brand_press_footer' %>
+    <% end %>
   <% else %>
     <%= render 'shared/footer' %>
   <% end %>
