--- a/app/views/shared/_brand_press_footer_block_a.html.erb
+++ b/app/views/shared/_brand_press_footer_block_a.html.erb
@@ -1,6 +1,6 @@
-<div class="col-sm-4 press-block-a col">
+
   <% if footer_block_a(press_subdomain).present? %>
-    <p><%= render_markdown footer_block_a(press_subdomain) %></p>
+    <%= render_markdown footer_block_a(press_subdomain) %>
   <% else %>
     <div class="crop">
       <%= image_tag logo(press_subdomain), alt: name(press_subdomain) + ' logo', class: 'img-responsive' %><br /><br />
@@ -9,10 +9,3 @@
       <a class="brand" href="<%= url(press_subdomain) %>"><%= name(press_subdomain) %></a>
     </p>
   <% end %>
-  <!-- <ul class="list-inline">
-    <li><a href="#">FB</a></li>
-    <li><a href="#">I</a></li>
-    <li><a href="#">T</a></li>
-    <li><a href="#">YT</a></li>
-  </ul> -->
-</div>
