--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,11 @@
 <header id="banner" role="banner">
   <hgroup>
     <% if press_subdomain.present? %>
-      <%= render 'shared/brand_press_bar' %>
+      <% if press_subdomain == 'leverpress' %>
+        <%= render 'shared/brand_press_bar_lever' %>
+      <% else %>
+        <%= render 'shared/brand_press_bar' %>
+      <% end %>
     <% else %>
       <%= render 'shared/brand_bar' %>
     <% end %>
