--- a/app/views/shared/_typekit.html.erb
+++ b/app/views/shared/_typekit.html.erb
@@ -1,6 +1,5 @@
 <% typekit_id = typekit(press_subdomain) %>
 
 <% unless typekit_id.nil? %>
-  <script src="https://use.typekit.net/<%= typekit_id %>.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <link rel="stylesheet" href="https://use.typekit.net/<%= typekit_id %>.css">
 <% end %>
