HELIO-3199 - change background color of breadcrumbs to match; modify label for pub. catalog in breadcrumbs

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -2530,6 +2530,11 @@ $lever-black-80: #342f2e;
   // breadcrumbs
   .breadcrumbs {
     @include scala-sans;
+
+    .breadcrumb {
+      background-color: $lever-grey-3;
+      border-color: $lever-grey-4;
+    }
   }
 
   //footer
