Real User Monitoring

--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -85,5 +85,6 @@
 
     <%= render 'shared/ajax_modal' %>
     <%= render 'shared/cookie_alert' %>
+    <%= render 'shared/monitoring' %>
   <% end %>
 </html>
