--- a/app/views/greensub/components/show.html.erb
+++ b/app/views/greensub/components/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
   <%
-    entity = Sighrax.factory(@component.noid)
+    entity = Sighrax.from_noid(@component.noid)
     file_set_id = 0
     monograph_id = 0
     if entity.is_a?(Sighrax::Monograph)
