--- a/app/views/fulcrum/_reports.html.erb
+++ b/app/views/fulcrum/_reports.html.erb
@@ -4,5 +4,6 @@
 <h1>Reports</h1>
 <ul>
   <li><%= link_to "Tombstones", tombstones_path %></li>
+  <li><%= link_to "Handle Deposits", handle_deposits_path %></li>
   <li><%= link_to "COUNTER Reports", customers_path %></li>
 </ul>
